src/components/BlogPreview/blogPreview.module.css
@keyframes shimmer {
  0% {
    background-position: -1200px 0;
  }
  100% {
    background-position: 1200px 0;
  }
}

.fallback {
  animation-name: shimmer;
  animation-duration: 2.2s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: shimmer;
  animation-timing-function: linear;
  background: #ddd;
  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
  background-size: 1200px 100%;
  border-radius: 1rem;
}

.outer {
  max-width: 1000px;
  margin: 0 auto;
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
}

.controls {
  margin-left: auto;
  margin-bottom: 1rem;
  display: flex;
  column-gap: 1rem;
  color: var(--theme-text);
  font-size: 1.2rem;
}

.control {
  opacity: 0.5;
  transition: opacity var(--animation);
  cursor: pointer;
}

.control:hover {
  opacity: 0.8;
}

.wrapper {
  height: 30rem;
  position: relative;
  display: flex;
  column-gap: 0.5rem;
}

.imageParent {
  position: relative;
  height: 100%;
  flex-shrink: 1;
  min-width: 2px;
  transition: all var(--animation);
  cursor: pointer;
  min-width: 8rem;
  filter: grayscale(100%) contrast(1.4);
  border-radius: 1rem;

  box-shadow: var(--theme-box-shadow-small);
}

.text {
  opacity: 0;
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  transition: opacity var(--animation);
  z-index: 999999;
  transition-delay: 0s;
  font-weight: 900;
  color: var(--theme-off-white);
  backdrop-filter: blur(50px);
  border-bottom-right-radius: 1rem;
  border-bottom-left-radius: 1rem;
  padding: 1.4rem;
  max-height: 100%;
  overflow: hidden;
}

.text h1 {
  font-size: 2rem;
  padding-bottom: 1rem;
}

.text p {
  font-size: 1.2rem;
  font-weight: 200;
  line-height: 1.6rem;
}

.active {
  flex-shrink: 0;
  flex-grow: 1;
  filter: grayscale(0%) contrast(1);
}

.active .text {
  opacity: 1;
  transition-delay: 0.1s;
}

.imageParent img {
  object-fit: cover;
  /* Tiny border radius still makes a differnece */
  border-radius: 1rem;
  object-position: center;
}

@media only screen and (max-width: 1000px) {
  .wrapper {
    flex-direction: column;
    row-gap: 1rem;
    padding: 0 1rem;
    height: unset;
  }

  .imageParent {
    position: relative;
    flex-grow: 1;
    height: 14rem;
    filter: grayscale(0%);
    transition: none;
  }

  .text {
    flex-shrink: 0;
    flex-grow: 1;
    opacity: 1;
  }

  .text h1 {
    font-size: 1.2rem;
  }

  .text p {
    font-size: 1rem;
  }

  .fallback {
    height: 944px; /* This is a hack to avoid CLS - can probably be done better */
  }

  .controls {
    display: none;
  }
}

